# src/controllers/index.ts
@@ -1,2 +1,1 @@
-export * from './searchConfig.controller';
 export * from './translate.controller';
