# src/routes/searchConfig.route.ts
@@ -1,16 +1,0 @@
-import { RequestHandler } from 'express';
-
-import * as searchConfigController from '../controllers/searchConfig.controller';
-
-export const createSearchConfig: RequestHandler = async (req, res, next) => {
-    try {
-        await searchConfigController.createSearchConfig(req.body);
-
-        res.status(201).json({
-            status: 201,
-            message: 'ok bratan, vse good'
-        });
-    } catch (error) {
-        next(error);
-    }
-};
