# src/types/technologies.ts
@@ -1,27 +1,0 @@
-export type TNoFluffJobsTechnologies =
-    | 'JavaScript'
-    | '.NET'
-    | 'SQL'
-    | 'Java'
-    | 'Python'
-    | 'React'
-    | 'AWS'
-    | 'TypeScript'
-    | 'HTML'
-    | 'Angular'
-    | 'Azure'
-    | 'PHP'
-    | 'Android'
-    | 'Kotlin'
-    | 'Vue.js'
-    | 'iOS'
-    | 'Golang'
-    | 'Spark'
-    | 'Scala'
-    | 'C'
-    | 'Hadoop'
-    | 'Ruby on Rails'
-    | 'Ruby'
-    | 'Flutter'
-    | 'Elixir'
-    | 'React native';
